--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "knex": "npx ts-node node_modules/knex/bin/cli.js",
     "lint": "eslint src --ext .ts --fix"
   },
   "repository": {
@@ -20,14 +21,15 @@
   "homepage": "https://github.com/EvertonCarvalho1/api-rest-nodejs#readme",
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.15.11",
     "eslint": "^8.33.0",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "fastify": "^4.12.0",
-    "knex": "^2.4.2",
-    "sqlite3": "^5.1.4"
+    "knex": "^2.4.2"
   }
 }
