--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "npx ts-node node_modules/knex/bin/cli.js",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,8 @@
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^0.28.3"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
