--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.15.11",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.33.0",
     "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.2",
     "typescript": "^5.0.4",
