--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "knex": "npx ts-node node_modules/knex/bin/cli.js",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsup src --out-dir build"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
+    "tsup": "^7.1.0",
     "tsx": "^3.12.2",
     "typescript": "^5.0.4",
     "vitest": "^0.28.3"
