--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "npx ts-node node_modules/knex/bin/cli.js",
@@ -39,6 +42,7 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
+    "pg": "^8.9.0",
     "zod": "^3.20.2"
   }
 }
